# bench-time

./: .gitignore  CLAUDE.md  README.md  example_usage.py  feature_eng.md  mlp_test.csv  pipeline_test.ipynb  pipeline_test_executed.ipynb  pyproject.toml  pytest.ini  requirements.txt  run_hpt.py  run_hpt_mlp.py  run_hpt_xgb.py  run_mlp.py  run_xgb.py  run_xgb_hp.py  temp_test_script.py  test_code.ipynb  test_parallel_basic.py  test_pipeline.ipynb  validate_xgb_standard.py  xgb_quantile_hp_tuning_1000.csv
.serena/: project.yml
scripts/: prepare_data.py
specs/: plan-add_model-extensible-quantile-xgboost.md  plan-data_prep-simple-preprocessing-script.md  plan-evaluation_refactor-centralized-metrics-calculation.md  plan-input_granularity-tuple-based-input.md  plan-integrate_lightning_standard-pytorch-lightning-neural-network.md  plan-notebook_test-working-notebook-development.md  plan-quantile_integration-xgboost-quantile-prototype.md  plan-refactor_dstructures-hierarchical-model-storage.md  plan-remove_feature_eng-remove-feature-engineering.md  plan-rewrite_context-comprehensive-documentation-update.md  plan-testing-integration-testing-strategy.md  plan-write_test_notebook-xgb-prototype-replication.md
src/: __init__.py  benchmark_pipeline.py  data_loading.py  data_structures.py  evaluation.py  experiment_config.py  feature_engineering.py  hyperparameter_tuning.py  laod_data.ipynb  metrics.py  model_training.py  model_types.py  pipeline.py  storage_utils.py  structures.py  test_pipeline_executed.ipynb  test_pipeline_executed_refactored.ipynb  utils.py
tests/: README.md  (+13 more)
(+97 files in other folders)
