[project]
name = "benchmarking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.1",
    "lets-plot>=4.7.3",
    "lightning>=2.5.5",
    "numpy>=2.2.6",
    "optuna>=4.3.0",
    "polars>=1.34.0",
    "pyarrow>=21.0.0",
    "pytest>=8.3.4",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.5",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "xgboost>=3.0.5",
]
